--- a/assets/styles/sistema.css
+++ b/assets/styles/sistema.css
@@ -3,3 +3,26 @@ canvas {
     top: 0;
     left: 0;
 }
+
+button{
+    background-color: rgb(0, 0, 0);
+    color: #fff;
+    cursor: pointer;
+    border-radius: 10px;
+    font-size: 1.5em;
+    width: 7vw;
+    height: 6vh;
+    z-index: 1999;
+}
+button:hover{
+    color: rgb(0, 0, 0);
+    background-color: #fff;
+}
+.buttons{
+    display: flex;
+    position: absolute;
+    width: 14vw;
+    left: 50%;
+    margin-left: -7vw;
+    top: 90vh;
+}
