--- a/views/sistema.ejs
+++ b/views/sistema.ejs
@@ -13,6 +13,49 @@
             <button class="next">Próximo</button>
             <button class="back">Anterior</button>
         </div>
+        <div class="planetassol">
+            <div class="sun astro">
+                <h1 align="center">Sol</h1>
+            </div>
+            <div class="mercury astro">
+                <h1 align="center">Mercúrio</h1>
+                Mercúrio é considerado o menor planeta do Sistema Solar desde o rebaixamento de Plutão a planeta
+                anão.
+                A proximidade de Mercúrio com o Sol (é o planeta mais próximo dessa estrela) torna o desenvolvimento
+                da
+                vida nesse planeta bastante difícil, pois há altas e baixas temperaturas, instabilidades climáticas,
+                atmosfera fraca e uma superfície escura, talvez devido à presença de grafite ou mesmo pelas altas
+                temperaturas, que “carbonizam” as paisagens.
+
+                Mesmo com todas as adversidades, é um planeta intrigante e que chama a atenção dos astrônomos por
+                conter
+                água, tanto em estado sólido quanto líquido (em menores quantidades).
+            </div>
+            <div class="venus astro">
+                <h1 align="center">Venus</h1>
+            </div>
+            <div class="earth astro">
+                <h1 align="center">Terra</h1>
+            </div>
+            <div class="mars astro">
+                <h1 align="center">Marte</h1>
+            </div>
+            <div class="jupiter astro">
+                <h1 align="center">Jupiter</h1>
+            </div>
+            <div class="saturn astro">
+                <h1 align="center">Saturno</h1>
+            </div>
+            <div class="uranus astro">
+                <h1 align="center">Urano</h1>
+            </div>
+            <div class="neptune astro">
+                <h1 align="center">Netuno</h1>
+            </div>
+            <div class="pluto astro">
+                <h1 align="center">Plutão</h1>
+            </div>
+        </div>
         <canvas class="bg"></canvas>
         <script type="importmap">
         {
