--- a/views/home.ejs
+++ b/views/home.ejs
@@ -9,21 +9,35 @@
 
 <body>
     <%- include('./partials/header.ejs') %>
-        <div class="info">
-            <h1 align="center"> Sobre </h1>
-            <h2>
-                O universo sempre foi intrigante. A curiosidade
-                humana fez com que buscássemos incessantemente por informações 
-                sobre a existência das matérias, planetas, estrelas e, até mesmo, nossa origem.
-                Nosso maior objetivo como ser vivo é entender de onde viemos e onde vamos.
-                Com isso, o universo foi muito estudado.
-                Aqui, você verá informações principais sobre nosso sistema: o Sistema Solar.
-            </h2>
+
+    <!--     <div class="cursor">
+            <div class="circle"></div>
+            <div class="ring"></div>
+        </div> -->
+
+        <div class="pag">
+
+            <div class="motivacoes info">
+                <ul>
+                    <li>a</li>
+                </ul>
+            </div>
+
+            <div class="teste info">
+                <ul>
+                    <li>a</li>
+                </ul>
+            </div>
+            
+            <div class="teste2 info">
+                <ul>
+                    <li>a</li>
+                </ul>
+            </div>
         </div>
 
-        <div class="registrar">
 
-        </div>
+        <script type="module" src="./src/home.js"></script>
 </body>
 
 </html>
