--- a/views/home.ejs
+++ b/views/home.ejs
@@ -10,32 +10,33 @@
 <body>
     <%- include('./partials/header.ejs') %>
 
-    <!--     <div class="cursor">
-            <div class="circle"></div>
-            <div class="ring"></div>
-        </div> -->
-
         <div class="pag">
+
+            <div class="principal">
+               <a href="SistemaSolar"> <h1>DESCUBRA <br>NOSSO SISTEMA</h1></a>
+                <div class="seta">
+                    <div class="linha">
+                    </div>
+                    <div class="ponta"></div>
+                </div>
+                <div class="seta2">
+                    <div class="linha">
+                    </div>
+                    <div class="ponta"></div>
+                </div>
+                <div class="seta3">
+                    <div class="linha">
+                    </div>
+                    <div class="ponta"></div>
+                </div>
+            </div>
 
             <div class="motivacoes info">
                 <ul>
                     <li>a</li>
                 </ul>
             </div>
-
-            <div class="teste info">
-                <ul>
-                    <li>a</li>
-                </ul>
-            </div>
-            
-            <div class="teste2 info">
-                <ul>
-                    <li>a</li>
-                </ul>
-            </div>
         </div>
-
 
         <script type="module" src="./src/home.js"></script>
 </body>
