--- a/views/sistema.ejs
+++ b/views/sistema.ejs
@@ -66,7 +66,7 @@
         }
        }
       </script>
-        <script type="module" src="./src/three.js"></script>
+        <script type="module" src="./src/sistema.js"></script>
 </body>
 
 </html>
