--- a/views/home.ejs
+++ b/views/home.ejs
@@ -13,7 +13,9 @@
         <div class="pag">
 
             <div class="principal">
-               <a href="SistemaSolar"> <h1>DESCUBRA <br>NOSSO SISTEMA</h1></a>
+                <a href="SistemaSolar">
+                    <h1>DESCUBRA <br>NOSSO SISTEMA</h1>
+                </a>
                 <div class="seta">
                     <div class="linha">
                     </div>
@@ -31,14 +33,42 @@
                 </div>
             </div>
 
-            <div class="motivacoes info">
+            <div class="intro info">
                 <ul>
-                    <li>a</li>
+                    <li>Como um estudante do ensino médio, me encantei com a astronomia.</li>
+                    <li>Por isso, decidi fazer esse site.</li>
                 </ul>
             </div>
-        </div>
+            <div class="intro2 info">
+                <ul>
+                    <li>oiii</li>
+                    <li>tudo bem</li>
+                </ul>
+            </div>
 
-        <script type="module" src="./src/home.js"></script>
+
+
+            <div class="image"><img class="saturn" src="./img/saturnmenu.png" alt=""></div>
+
+            <div class="retornar">
+                <div class="">
+                    <div class="linha">
+                    </div>
+                    <div class="ponta"></div>
+                </div>
+                <div class="">
+                    <div class="linha">
+                    </div>
+                    <div class="ponta"></div>
+                </div>
+                <div class="">
+                    <div class="linha">
+                    </div>
+                    <div class="ponta"></div>
+                </div>
+            </div>
+
+            <script type="module" src="./src/home.js"></script>
 </body>
 
 </html>
