--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -15,7 +15,7 @@
         <ul>
             <li><a href="/">início</a></li>
             <li><a href="SistemaSolar">sistema</a></li>
-            <li>Fórmulas</li>
+            <li><a href="Formulas">Fórmulas</a></li>
         </ul>
     </div>
 </body>
