--- a/views/home.ejs
+++ b/views/home.ejs
@@ -35,8 +35,8 @@
 
             <div class="intro info">
                 <ul>
-                    <li>Como um estudante do ensino médio, me encantei com a astronomia.</li>
-                    <li>Por isso, decidi fazer esse site.</li>
+                    <li>oolaola ola.</li>
+                    <li>site.</li>
                 </ul>
             </div>
             <div class="intro2 info">
@@ -48,7 +48,9 @@
 
 
 
-            <div class="image"><img class="saturn" src="./img/saturnmenu.png" alt=""></div>
+            <div class="image">
+                <img class="saturn" src="./img/saturnmenu.png" alt="">
+            </div>
 
            
 
