--- a/assets/styles/home.css
+++ b/assets/styles/home.css
@@ -65,29 +65,16 @@ body {
 }
 
 .info {
-    opacity: 0;
-    transition: 1.5s;
+    transition: 2s;
     margin-top: 70vh;
     margin-bottom: 30vh;
 }
 
-.footer{
-    width: 100%;
-    height: 20vh;
-    background-color: #fff;
-}
-
 .saturn{
-    position: absolute;
-    z-index: -1;
-    top: 100vh;
-    left: -150vw;
+    margin-left: -20vw;
+    transition: 2s;
+    width: 15vw;
 }
-.image{
-    width: 100vw;
-    height: 70vh;
-}
-
 
 @keyframes sobe {
     to {
